2012-10-23  Earnie Boyd  <earnie@users.sourceforge.net>

	https://sourceforge.net/tracker/?func=detail&aid=3437558&group_id=2435&atid=102435

	* include/amvideo.h (VIDEOINFO): Correct structure coding.

2012-10-23  Earnie Boyd  <earnie@users.sourceforge.net>

	https://sourceforge.net/tracker/?func=detail&aid=3437216&group_id=2435&atid=102435

	* include/objfwd.h (LPENUMSTATPROPSTG): Properly type define with as a
	pointer.

2012-10-22  Earnie Boyd  <earnie@users.sourceforge.net>

	https://sourceforge.net/tracker/?func=detail&aid=2567153&group_id=2435&atid=102435

	* include/sys/types.h (off_t): Type define regardless of _NO_OLDNAMES.

2012-10-21  Earnie Boyd  <earnie@users.sourceforge.net>

	https://sourceforge.net/tracker/?func=detail&aid=2004630&group_id=2435&atid=102435

	* include/ddk/ntddk.h (KeQueryActiveProcessors): New VISTA declaration.
	* lib/lib32/ddk/ntoskrnl.def: New VISTA import.

2012-10-19  Earnie Boyd  <earnie@users.sourceforge.net>

	https://sourceforge.net/tracker/?func=detail&aid=3554826&group_id=2435&atid=102435

	* include/mswsock.h (WSAPoll): New declaration.
	* lib/lib32/ws2_32.def (WSAPoll@12): New import.

2012-10-17  Earnie Boyd  <earnie@users.sourceforge.net>

	* tests/Makefile.in (libcrt-test-asinh): Add test.

2012-10-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	https://sourceforge.net/tracker/index.php?func=detail&aid=2117590&group_id=2435&atid=102435

	* tests/libcrt/test-asinh.c: New file.

2012-10-16  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/sdkddkver.h (WINNTVER): New macro.
	(_WIN32_WINNT): Correct default value based on NTDDI_VERSION.
	* include/stdio.h (_get_output_format): Base declaration or define on
	VISTA.
	(_set_output_format): Ditto.
	(_get_printf_count_output): Ditto.
	(_set_printf_count_output): Ditto.
	* misc/src/libcrt/stdio/pformat.c: Remove needless code since we only
	care about Windows.

2012-10-08  Earnie Boyd  <earnie@users.sourceforge.net>
